<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".presentation.tictactoe.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/bt_block0"
            style="@style/buttonsBlock"/>

        <Button
            android:id="@+id/bt_block1"
            style="@style/buttonsBlock"/>

        <Button
            android:id="@+id/bt_block2"
            style="@style/buttonsBlock"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/bt_block3"
            style="@style/buttonsBlock"/>

        <Button
            android:id="@+id/bt_block4"
            style="@style/buttonsBlock"/>

        <Button
            android:id="@+id/bt_block5"
            style="@style/buttonsBlock"/>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/bt_block6"
            style="@style/buttonsBlock"/>

        <Button
            android:id="@+id/bt_block7"
            style="@style/buttonsBlock"/>

        <Button
            android:id="@+id/bt_block8"
            style="@style/buttonsBlock"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/tv_show_result"/>

    <Button
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/restart_button_text_initially"
        android:id="@+id/bt_restart_game"/>

</LinearLayout>
