<resources>
    <string name="app_name">Tic-Tac-Toe</string>

    <string name="player_wins">Player %d Wins</string>
    <string name="draw">It\'s a Tie</string>

    <string name="player_1_move">O</string>
    <string name="player_2_move">X</string>


    <string name="restart_message">Do you want to restart the game?  </string>


    <string name="restart_button_text_initially">Start New Game</string>
    <string name="restart_button_text_in_middle_of_game">Restart Game</string>


</resources>
